# forge-composer

./: .gitignore  README.md
daemon/: Cargo.toml
daemon/composerd/: Cargo.toml
daemon/composerd/src/: api.rs  config.rs  forgeloop_bridge.rs  lib.rs  main.rs  orchestrator.rs  serve.rs  state.rs  testkit.rs
daemon/composerd/tests/: api.rs  cli.rs
daemon/crates/gateway/: Cargo.toml
daemon/crates/gateway/src/: anthropic.rs  lib.rs
daemon/crates/gateway/tests/: anthropic.rs  stub.rs
daemon/crates/ledger/: Cargo.toml
daemon/crates/ledger/src/: lib.rs
daemon/crates/policy/: Cargo.toml
daemon/crates/policy/src/: lib.rs
daemon/crates/tools/: Cargo.toml
daemon/crates/tools/src/: fs_tools.rs  lib.rs  shadow.rs  terminal.rs  worktree.rs
docs/superpowers/plans/: 2026-07-22-m0-spine.md  2026-07-22-m1-hands.md  2026-07-23-m2-orchestra.md  2026-07-23-m3-physics.md  2026-07-23-m4-cockpit.md  2026-07-23-m5-ship.md
docs/superpowers/specs/: 2026-07-22-forge-composer-design.md
extension/: esbuild.mjs  package-lock.json  package.json  tsconfig.json
extension/src/: chatView.ts  daemon.ts  extension.ts  sessionsBoard.ts
scripts/: dogfood-codium.sh  package.sh
tests/oracle/: assert-extension-build.sh  assert-m0-spine.sh  assert-m1-hands.sh  assert-m2-orchestra.sh  assert-m3-physics.sh  assert-m4-cockpit.sh  assert-m5-ship.sh  stub-llm-m1.py  stub-llm-m2.py  stub-llm-m3.py  stub-llm-m4.py  stub-llm-m5.py  stub-llm.py
