[package]
name = "composerd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
ledger = { path = "../crates/ledger" }
gateway = { path = "../crates/gateway" }
policy = { path = "../crates/policy" }
tools = { path = "../crates/tools" }
tokio.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ulid.workspace = true
futures.workspace = true
rand.workspace = true

[dev-dependencies]
tempfile.workspace = true
reqwest.workspace = true
